@@ -145,7 +145,7 @@ description of SallocDefaultCommand in the slurm.conf man page for more
 information about how to spawn a remote shell.
 
 .TP
-\fB\-\-begin\fR=<\fItime\fR>
+\fB\-b\fR, \fB\-\-begin\fR=<\fItime\fR>
 Submit the batch script to the Slurm controller immediately, like normal, but
 tell the controller to defer the allocation of the job until the specified time.
 
