@@ -177,7 +177,7 @@ The form of the specification is system dependent.
 These burst buffer directives will be inserted into the submitted batch script.
 
 .TP
-\fB\-\-begin\fR=<\fItime\fR>
+\fB\-b\fR, \fB\-\-begin\fR=<\fItime\fR>
 Submit the batch script to the Slurm controller immediately, like normal, but
 tell the controller to defer the allocation of the job until the specified time.
 
