@@ -75,7 +75,6 @@ enum {
 	LONG_OPT_ACCTG_FREQ,
 	LONG_OPT_BATCH,
 	LONG_OPT_BCAST,
-	LONG_OPT_BEGIN,
 	LONG_OPT_BELL,
 	LONG_OPT_BLRTS_IMAGE,
 	LONG_OPT_BURST_BUFFER_FILE,
